Import of FALCONE/Dist-Zilla-MintingProfile-RTx-0.02 from CPAN.
gitpan-cpan-distribution: Dist-Zilla-MintingProfile-RTx
gitpan-cpan-version:      0.02
gitpan-cpan-path:         FALCONE/Dist-Zilla-MintingProfile-RTx-0.02.tar.gz
gitpan-cpan-author:       FALCONE
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -17,6 +17,10 @@ no_index:
   directory:
     - inc
     - profiles
+requires:
+  Dist::Zilla: 0
+  Module::Install::RTx: 0
+  Module::Install::ReadmeFromPod: 0
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 0.01
+version: 0.02
