--- a/META.yml
+++ b/META.yml
@@ -3,12 +3,12 @@ abstract: ~
 author:
   - 'Kevin Falcone <falcone@bestpractical.com>'
 build_requires:
-  ExtUtils::MakeMaker: 6.36
+  ExtUtils::MakeMaker: 6.59
 configure_requires:
-  ExtUtils::MakeMaker: 6.36
+  ExtUtils::MakeMaker: 6.59
 distribution_type: module
 dynamic_config: 1
-generated_by: 'Module::Install version 1.06'
+generated_by: 'Module::Install version 1.08'
 license: gplv2
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -20,8 +20,9 @@ no_index:
     - profiles
 requires:
   Dist::Zilla: 0
-  Module::Install::RTx: 0
+  Module::Install::RTx: 0.3404
   Module::Install::ReadmeFromPod: 0
+  perl: 5.8.3
 resources:
   license: http://opensource.org/licenses/gpl-license.php
-version: 0.09
+version: '0.10'
